# cargo-gh

./: Cargo.toml  README.md
.config/: ghdist.toml  ghinstall.toml
.github/workflows/: ci.yml  release-continuous.yml  release-manual.yml  release.yml  workflow-lint.yml
cargo-ghdist/: Cargo.toml
cargo-ghdist/src/: builder.rs  cli.rs  config.rs  error.rs  github.rs  init.rs  lib.rs  main.rs  packager.rs
cargo-ghdist/tests/: cli_test.rs  integration_test.rs  packager_test.rs
cargo-ghinstall/: Cargo.toml
cargo-ghinstall/src/: cli.rs  config.rs  error.rs  github.rs  installer.rs  lib.rs  main.rs  retry.rs  utils.rs
cargo-ghinstall/tests/: cli_test.rs  integration_test.rs
