[workspace]
members = ["cargo-ghinstall", "cargo-ghdist"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mkusaka/cargo-gh"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
octocrab = { version = "0.38", default-features = false, features = ["rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.39", features = ["full"] }
tar = "0.4"
zip = "2.0"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.10"
git2 = { version = "0.18", features = ["vendored-openssl"] }
cargo-manifest = "0.15"
