[package]
name = "cargo-ghdist"
description = "Create and distribute GitHub releases"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
cargo-manifest.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
directories.workspace = true
flate2.workspace = true
git2.workspace = true
hex.workspace = true
octocrab.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zip.workspace = true
